--- a/layouts/partials/base/imports.html
+++ b/layouts/partials/base/imports.html
@@ -7,4 +7,4 @@
 <link href='https://fonts.googleapis.com/css?family=Merriweather:300%7CRaleway%7COpen+Sans' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ $baseurl }}css/font-awesome.min.css">
 <link rel="stylesheet" href="{{ $baseurl }}css/style.css">
-{{ if isset .Site.Params "highlight" }}<link rel="stylesheet" href="{{ $baseurl }}css/highlight/{{ .Site.Params.highlight }}.css">{{ end }}
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/default.min.css">
