--- a/layouts/partials/base/scripts.html
+++ b/layouts/partials/base/scripts.html
@@ -14,6 +14,6 @@
 {{ end }}
 
 {{ with .Site.Params.highlight }}
-<script src="{{ "/js/highlight.pack.js" | absURL }}"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 {{ end }}
